# osrlib

./: CMakeLists.txt  README.md  analyzecode.sh
msvs2012/: osrlib.sln
msvs2012/osrlib/: osrlib.vcxproj  osrlib.vcxproj.filters
msvs2012/osrlib_demo/: osrlib_demo.vcxproj  osrlib_demo.vcxproj.filters
src/: CPPLINT.cfg  core.cpp  core.h  io.cpp  io.h  main.cpp  osrlib.cpp  osrlib.h  osrlib_io.cpp  osrlib_io.h  osrlib_main.cpp  osrlib_rendering.cpp  osrlib_rendering.h  osrlib_test.cpp  osrlib_test.h  osrlib_yaml.cpp  osrlib_yaml.h  rendering.cpp  rendering.h  test.cpp  test.h  yaml.cpp  yaml.h
testdata/: scene.yaml
