CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(osrlib)

# Dependencies
FIND_PACKAGE(Boost 1.36.0 COMPONENTS log)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_LIBRARIES(${Boost_LOG_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
  SET(Boost_USE_STATIC_LIBS ON)
ENDIF()

FIND_PACKAGE(GLEW REQUIRED)
IF (GLEW_FOUND)
  INCLUDE_DIRECTORIES($(GLEW_INCLUDE_DIRS))
  LINK_LIBRARIES(${GLEW_LIBRARIES})
ENDIF()

SET(OpenGL_GL_PREFERENCE GLVND)
FIND_PACKAGE(OpenGL REQUIRED)
IF (OPENGL_FOUND)
  INCLUDE_DIRECTORIES($(OPENGL_INCLUDE_DIRS))
  LINK_LIBRARIES(${OPENGL_LIBRARIES})
ENDIF()

FIND_PACKAGE(glfw3 3.3 REQUIRED)
IF (glfw3_DIR)
  LINK_LIBRARIES(glfw)
ENDIF()

FIND_PACKAGE(glm REQUIRED)

# Sources
SET(SRC src/osrlib.cpp
  src/osrlib_test.cpp
  src/osrlib_rendering.cpp
  src/osrlib_io.cpp
  src/osrlib_main.cpp)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add test binary
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
